dom/base/nsJSUtils.h
@@ -216,6 +216,8 @@ public:
     return JS_IdToValue(aContext, id, &v) && init(aContext, v);
   }
 
+  bool init(const JS::Value &v);
+
   ~nsAutoJSString() {}
 };
 
